--- a/admin/index.html
+++ b/admin/index.html
@@ -173,7 +173,7 @@
             function login() {
                 var un = document.getElementById("username").value;
                 var pw = document.getElementById("password").value;
-                if (un == "Sushil" && pw == "jnvQadmin") {
+                if (un == "UserName" && pw == "Password") {
                     document.getElementById("loginDiv").style.display="none";
                     document.getElementById("mainDiv").style.display="block";
                     
